2015-02-01  Araki Ken  <arakiken@users.sf.net>

	* README.android: Updated.

	* MLActivity.java: forceAsciiInput() which x_xic_switch_mode() uses is added.

	* android/jni/x_xic.c: Added.

2015-01-31  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c:
	  - ml_term_set_config("use_local_echo", "false") is called before
	    ml_term_parse_vt100_sequence() if term->use_local_echo is true.
	  - Java_mlterm_native_1activity_MLActivity_{commit|preedit}Text()
	    calls update_ime_text() with the use of pthread_mutex_lock().

	* android/jni/x_display.[ch], x_event_source.c:
	  Java_mlterm_native_1activity_MLActivity_visibleFrameChanged() is moved to
	  x_event_source.c while its implementation is left as x_display_resize().

	* MLActivity.java: visibleFrameChanged() is called even if isPreediting is true.

2015-01-28  Araki Ken  <arakiken@users.sf.net>

	* README.ja, man/mlterm.1: Updated.

	* doc/ja/README.w3m: Removed.

	* MLActivity.java: visibleFrameChanged() is not called if isPreediting is true.

	* x_event_source.c: ALooper_wake() is removed and pthread_mutex_{un}lock()
	  are called before and after changing commit_text and preedit_text.

	* x_main_config.c:
	  - The default value of "only_use_unicode_font" is "true" on Android.
	  - The default value of "box_drawing_font" is "unicode" on Android.

2015-01-25  Araki Ken  <arakiken@users.sf.net>

	* fb/x_font.c: percent = 0 in x_font_new() on android.

	* etc/main, etc/main.ja: Updated.

	* ml_term.c: ml_logvis_ctl is created if terminal encoding is not only UTF-8
	  but also ISCII_XXX.

2015-01-24  Araki Ken  <arakiken@users.sf.net>

	* README, PROTOCOL, README.android, README.indic, README.ja, man/mlterm.1:
	  Updated.

	* android/jni/main.c, MLActivity.java: unifont.pcf is not saved in starting.

	* vte.c: Minor fixes.

	* mc_flags.[ch]: MC_FLAG_BIDI and MC_FLAG_IND are integrated to MC_FLAG_CTL.

	* mc_bidi.[ch]: Renamed to mc_ctl.[ch].

	* x_main_config.[ch], x_screen.c, x_screen_manager.c, ml_term.[ch],